--- a/Web/index.html
+++ b/Web/index.html
@@ -4,12 +4,14 @@
   <head>
     <meta charset="utf-8" />
 
-    <title></title>
+    <title>Multiplication Tables</title>
 
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
+    <div></div>
+
     <script src="main.js"></script>
   </body>
 </html>
